2007-12-10	Till Straumann <strauman@slac.stanford.edu>

	* shared/vectors/README.deprecated, shared/irq/README.deprecated:
	added READMEs stating that certain files should not be
	copy/paste/modified when creating new BSPs. New BSPs
	are encouraged to use the new library under
	libcpu/powerpc/new-exceptions/bspsupport.

2007-12-10	Till Straumann <strauman@slac.stanford.edu>
	
	* shared/vectors/vectors_entry.S, motorola_powerpc/bsp_specs,
	shared/start/vectors_entry.S: moved vectors_entry.S to
	'start' subdir and made a start file rather than
	element of vectors.rel (it should always be linked but
	won't if it is the sole member of vectors.rel).

2007-12-08	Till Straumann <strauman@slac.stanford.edu>

	* shared/vme/vme_universe.c: fixed wrong initialization
	routine when using Tsi148 driver.

2007-12-08	Till Straumann <strauman@slac.stanford.edu>

	* Makefile.am: merged shared/vme/vme_universe.c and
	shared/vme/vme_universe_dma.c into one file.
	Added support for Tsi148 driver (DMA).

2007-12-08	Till Straumann <strauman@slac.stanford.edu>

	* shared/vme/VMEConfig.h, shared/vme/vme_universe.c:
	added support for Tsi148 bridge; BSP can define which
	bridge driver to use from VMEConfig.h.
	Added 'err' macro parameter to BSP_VME_INSTALL_IRQ_MGR(err)
	macro so that an error status can be passed back.

2007-12-08	Till Straumann <strauman@slac.stanford.edu>

	* irq_supp.h: was moved from shared/irq to
	libcpu/powerpc/new-exceptions/bspsupport.

2007-12-08	Till Straumann <strauman@slac.stanford.edu>

	* ep1a/irq/irq.c, gen5200/irq/irq.c, gen83xx/irq/irq_init.c,
	mbx8xx/irq/irq.c, mpc8260ads/irq/irq.c, mvme5500/irq/irq.c,
	psim/irq/no_pic.c, score603e/irq/irq.c, shared/irq/irq_supp.h,
	shared/irq/openpic_i8259_irq.c, virtex/irq/irq_init.c:
	let C_dispatch_irq_handler() return zero to indicate to
	low-level exception handling code that the exception
	was handled (not used yet).

2007-12-08	Till Straumann <strauman@slac.stanford.edu>
